# pychromatic

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  color_mixer.ipynb  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml
docs/: Makefile  _config.yml  _toc.yml  api.md  api.rst  authors.rst  conf.py  getting_started.md  index.rst  installation.rst  intro.md  make.bat  modules.rst  palette_reference.md  palette_reference.rst  pychromatic.rst  quickstart.rst  usage.rst
docs/colors/: color_tests.rst
docs/examples/: colorblind.ipynb  colorblind.rst  colormaps.ipynb  colormaps.rst  colors.ipynb  colors.rst  palettes.ipynb  palettes.rst  plotting.ipynb  plotting.rst  utilities.ipynb  utilities.rst
notebooks/: 01_working_with_colors.ipynb  02_working_with_colors.ipynb  color_mixer.ipynb  color_tests.ipynb
notebooks/.ipynb_checkpoints/: color_mixer-checkpoint.ipynb  color_tests-checkpoint.ipynb
pychromatic/: __init__.py  colorclass.py  colors.py  cutils.py  decors.py  palette.py  plutils.py
tests/: __init__.py  test_pychromatic.py
